--- a/views/layout2.pug
+++ b/views/layout2.pug
@@ -36,3 +36,5 @@ html
     script(src='/js/backbone/lib/backbone-min.js')
     script(src="/socket.io/socket.io.js")
     script(src='/js/do.js')
+    script.
+      UPLOADCARE_PUBLIC_KEY = '4c0d19047e5db8157e75';
