--- a/views/layout2.pug
+++ b/views/layout2.pug
@@ -28,13 +28,13 @@ html
             li.nav-item
               a.nav-link( id="qsLoginBtn" href="/login" ) LogIn
     block content
-    script(src='/js/jquery-1.8.3.min.js')
+    script(src='http://cdn.themindbreaker.xyz/js/jquery-1.8.3.min.js')
     script(src="https://cdn.auth0.com/js/auth0/8.7/auth0.min.js")
     script(src='//ucarecdn.com/libs/widget/3.3.0/uploadcare.full.min.js')
     script(src="https://unpkg.com/giphy.js/dist/giphy.min.js")
-    script(src='/js/backbone/lib/underscore-min.js')
-    script(src='/js/backbone/lib/backbone-min.js')
+    script(src='http://cdn.themindbreaker.xyz/js/backbone/lib/underscore-min.js')
+    script(src='http://cdn.themindbreaker.xyz/js/backbone/lib/backbone-min.js')
     script(src="/socket.io/socket.io.js")
-    script(src='/js/do.js')
+    script(src='http://cdn.themindbreaker.xyz/js/do.js')
     script.
       UPLOADCARE_PUBLIC_KEY = '4c0d19047e5db8157e75';
