--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,7 +3,7 @@ html
   head
     title= title
     link(href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css", rel="stylesheet", integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB", crossorigin="anonymous")
-    script(src='http://cdn.themindbreaker.xyz/js/jquery-1.8.3.min.js')
+    script(src='https://1013552044.rsc.cdn77.org/js/jquery-1.8.3.min.js')
     script(src="https://cdn.auth0.com/js/auth0/8.7/auth0.min.js")
   body
     nav.navbar.navbar-expand-lg.navbar-light.bg-light( role="navigation" )
