--- a/views/todobreaker.pug
+++ b/views/todobreaker.pug
@@ -11,7 +11,7 @@ block content
           h5.card-title Nuevo ToDo
           div.card-body
             form( id='todo-form')
-              input(id='new-todo', class="form-control", placeholder="What needs to be done?", name='title')
+              input(id='new-todo', class="form-control", placeholder="¿Que quieres hacer?", name='title')
               hr
               input(type="hidden" role="uploadcare-uploader" name="content" data-images-only="true" id="filecont")
               hr
